--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
                    <a href="about-us.html" >About Us</a>
                    <a href="contact-us.html" >Contact Us</a>
                    <a href="products/products.html" >Products</a>
+                   <h1> This the heading title - About Me page</h1>
+                   <p><span style="color:red;"> This is an<strong> example </strong> paragraph.</strong>
+                </span> Anything in the <strong> body</strong> tag will appear on the page, just like this<strong> p</strong> tag will appear
+                on the page, just like this <strong> p</strong> tag and its contents.
+                 </p>
 
         </div>
         <p> My World. </p>
